--- a/HTML/index.html
+++ b/HTML/index.html
@@ -84,7 +84,7 @@
 
             <!-- Start Traditional Food Content -->
 
-            <div class="traditional-food animation-fly-in">
+            <div class="traditional-food animation-fly-in" id="traditional-food">
                 <h1 class="h1">Món ăn truyền thống</h1>
                 <div class="content d-flex items-center">
                     <div class="left-img">
@@ -104,7 +104,7 @@
 
             <!-- Start Traditional Clothes Content -->
 
-            <div class="traditional-clothes animation-fly-in">
+            <div class="traditional-clothes animation-fly-in" id="traditional-clothes">
                 <h1 class="h1">Trang phục truyền thống</h1>
                 <div class="content d-flex items-center">
                     <div class="left-paragraph">
@@ -123,7 +123,7 @@
 
             <!-- Start Traditional Festival Content -->
 
-            <div class="traditional-festival animation-fly-in">
+            <div class="traditional-festival animation-fly-in" id="traditional-festival">
                 <h1 class="h1">Lễ hội truyền thống</h1>
                 <div class="content">
                     <div class="paragraph">
@@ -157,5 +157,5 @@
     <!-- Script -->
     <script src="../src/JS/insertNav.js"></script>
 </body>
-
+    
 </html>
