--- a/HTML/signin.html
+++ b/HTML/signin.html
@@ -36,9 +36,9 @@
                 <h1 class="h1">Sign in</h1>
                 <div class="content d-flex">
                     <div class="left-form">
-                        <form action="">
-                            <label for="email-input" class="d-block">Email</label>
-                            <input type="text" id="email-input" placeholder="Enter your email" class="text-input">
+                        <form action="" id="sign-in-form">
+                            <label for="email-input" class="d-block">Username</label>
+                            <input type="text" id="username-input" placeholder="Enter your username" class="text-input">
                             <label for="password-input" class="d-block">Password</label>
                             <input type="password" name="" id="password-input" placeholder="Enter your password"
                                 class="text-input">
@@ -64,7 +64,7 @@
         <!-- End content -->
     </div>
     <!-- Script -->
-    <script src="../src/JS/insertNav.js"></script>
+    <script src="../src/JS/signInScript.js"></script>
     <!-- Background -->
     <div class="background position-fixed"></div>
 </body>
