--- a/HTML/shop.html
+++ b/HTML/shop.html
@@ -33,7 +33,11 @@
         <!-- Start content -->
         <main>
             <form action="" class="search-form">
-                <input type="text" name="" id="">
+                <h3 class="heading">Bạn muốn tìm cái gì không?</h3>
+                <div class="input d-flex items-center justify-evenly">
+                    <i class="fa-solid fa-magnifying-glass" style="color: #000000;"></i>
+                    <input type="text" class="search-input" name="" id="search-input" placeholder="Search here">
+                </div>
             </form>
             <div class="container">
                 <ul class="render-product-list d-flex justify-evenly items-center flex-wrap">
@@ -50,7 +54,7 @@
     </div>
     <!-- Script -->
     <script src="../src/JS/insertNav.js"></script>
-    <script src="../src/JS/renderProductList.js"></script>
+    <script src="../src/JS/shop.js"></script>
     <!-- Background -->
     
 </body>
