--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <!-- Style -->
     <link rel="stylesheet" href="../src/CSS/allstyle.css">
-    <link rel="stylesheet" href="../src/CSS/blog.css">
+    <link rel="stylesheet" href="../src/CSS/index.css">
     <link rel="stylesheet" href="../src/CSS/nav.css">
     <!-- Font Awesome 6.3.1 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -30,12 +30,18 @@
         <!-- Start header -->
         <header class="header"></header>
         <!-- End header -->
+        <!-- Start content -->
+        <main>
+            <div class="container">
+                <form action="" class="">
+                    <fieldset>
+                        
+                    </fieldset>
+                </form>
+            </div>
+        </main>
+        <!-- End content -->
     </div>
-    <!-- Start content -->
-    <main>
-        
-    </main>
-    <!-- End content -->
     <!-- Script -->
     <script src="/src/JS/insertNav.js"></script>
 </body>
