--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
     <div class="background position-fixed"></div>
     <!-- Script -->
     <script src="../src/JS/insertNav.js"></script>
+    <script src="/src/JS/index.js"></script>
 </body>
     
 </html>
