--- a/shop.html
+++ b/shop.html
@@ -54,7 +54,9 @@
     </div>
     <!-- Script -->
     <script src="../src/JS/insertNav.js"></script>
+    <script src="/src/JS/index.js"></script>
     <script src="../src/JS/shop.js"></script>
+    <script src="/src/JS/cart.js"></script>
     <!-- Background -->
     
 </body>
