--- a/contact.html
+++ b/contact.html
@@ -57,6 +57,7 @@
     </div>
     <!-- Script -->
     <script src="/src/JS/insertNav.js"></script>
+    <script src="/src/JS/index.js"></script>
 </body>
 
 </html>
