--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tết Giáp Thìn 2024</title>
     <!-- Icon -->
-    <link rel="shortcut icon" href="/assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/logo.png" type="image/x-icon">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <!-- Style -->
-    <link rel="stylesheet" href="../src/CSS/allstyle.css">
-    <link rel="stylesheet" href="../src/CSS/index.css">
-    <link rel="stylesheet" href="../src/CSS/nav.css">
+    <link rel="stylesheet" href="./src/CSS/allstyle.css">
+    <link rel="stylesheet" href="./src/CSS/index.css">
+    <link rel="stylesheet" href="./src/CSS/nav.css">
     <!-- Font Awesome 6.3.1 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -45,21 +45,21 @@
             <!-- The slideshow/carousel -->
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="../assets/images/slide1.jpg" alt="" class="d-block w-100">
+                    <img src="./assets/images/slide1.jpg" alt="" class="d-block w-100">
                     <div class="carousel-caption">
                         <h3>Tết Giáp Thìn 2024</h3>
                         <p>Tết năm rồng, nhân bội lộc</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/images/slide2.jpg" alt="" class="d-block w-100">
+                    <img src="./assets/images/slide2.jpg" alt="" class="d-block w-100">
                     <div class="carousel-caption">
                         <h3>Tết Giáp Thìn 2024</h3>
                         <p>Những món ăn truyền thống ngày Tết</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="../assets/images/slide3.jpg" alt="" class="d-block w-100">
+                    <img src="./assets/images/slide3.jpg" alt="" class="d-block w-100">
                     <div class="carousel-caption">
                         <h3>Tết Giáp Thìn 2024</h3>
                         <p>Mùa lễ hội lớn nhất trong năm</p>
@@ -88,7 +88,7 @@
                 <h1 class="h1">Món ăn truyền thống</h1>
                 <div class="content d-flex items-center">
                     <div class="left-img">
-                        <img src="../assets/images/traditional-food.jpg" alt="">
+                        <img src="./assets/images/traditional-food.jpg" alt="">
                     </div>
                     <div class="right-paragraph">
                         <p>Vào đêm Tất niên hay ngày Tết, chúng ta không thể bỏ qua những món ăn truyền thống như bánh
@@ -112,7 +112,7 @@
                             áo dài Tết, nón lá, ... Những bộ trang phục vừa có nét cổ điển lại vừa có nét hiện đại.</p>
                     </div>
                     <div class="right-img">
-                        <img src="../assets/images/traditional-clothes-1.jpg" alt="">
+                        <img src="./assets/images/traditional-clothes-1.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -134,8 +134,8 @@
                         </p>
                     </div>
                     <div class="img d-flex items-center justify-evenly">
-                        <img src="../assets/images/traditional-festival-1.jpg" alt="">
-                        <img src="../assets/images/traditional-festival-2.jpg" alt="">
+                        <img src="./assets/images/traditional-festival-1.jpg" alt="">
+                        <img src="./assets/images/traditional-festival-2.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -155,7 +155,7 @@
     <!-- Background -->
     <div class="background position-fixed"></div>
     <!-- Script -->
-    <script src="../src/JS/insertNav.js"></script>
+    <script src="./src/JS/insertNav.js"></script>
     <script src="/src/JS/index.js"></script>
 </body>
     
