--- a/shop.html
+++ b/shop.html
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <!-- Style -->
-    <link rel="stylesheet" href="../src/CSS/allstyle.css">
-    <link rel="stylesheet" href="../src/CSS/shop.css">
-    <link rel="stylesheet" href="../src/CSS/nav.css">
+    <link rel="stylesheet" href="./src/CSS/allstyle.css">
+    <link rel="stylesheet" href="./src/CSS/shop.css">
+    <link rel="stylesheet" href="./src/CSS/nav.css">
     <!-- Font Awesome 6.3.1 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -53,10 +53,10 @@
         <!-- End footer -->
     </div>
     <!-- Script -->
-    <script src="../src/JS/insertNav.js"></script>
-    <script src="/src/JS/index.js"></script>
-    <script src="../src/JS/shop.js"></script>
-    <script src="/src/JS/cart.js"></script>
+    <script src="./src/JS/insertNav.js"></script>
+    <script src="./src/JS/index.js"></script>
+    <script src="./src/JS/shop.js"></script>
+    <script src="./src/JS/cart.js"></script>
     <!-- Background -->
     
 </body>
