--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
         <!-- Start content -->
         <main>
             <div class="container">
-                <form class="contact-form" action="" class="">
+                <div class="content d-flex">
                     <div class="left-infor">
                         <img src="/assets/images/my_avatar.png" alt="">
                         <div class="infor">
@@ -41,16 +41,18 @@
                                 Admin: Minh Nhat Phan <br>
                                 Phone number: 0899601364 <br>
                                 Email: coiminhnhat2210@gmail.com <br>
-                                Address: 11, Pham Ngoc Thach Street, Hung Dung Ward, Vinh, Nghe An Province, Viet Nam
+                                Address: 11, Pham Ngoc Thach Street, Hung Dung Ward, Vinh, Nghe An Province, Viet
+                                Nam
                             </p>
                         </div>
                     </div>
-                    <div class="right-form">
-                        <form action="">
-                            
-                        </form>
-                    </div>
-                </form>
+                    <form action="" class="right-form">
+                        <p>Subject</p>
+                        <input type="text" class="text-input subject" id="subject" placeholder="Enter your subject">
+                        <p>Message</p>
+                        <textarea rows="5" cols="40" class="text-input" id="message" placeholder="Enter your message"></textarea>
+                    </form>
+                </div>
             </div>
         </main>
         <!-- End content -->
