--- a/index.html
+++ b/index.html
@@ -108,8 +108,10 @@
                 <h1 class="h1">Trang phục truyền thống</h1>
                 <div class="content d-flex items-center">
                     <div class="left-paragraph">
-                        <p>Ngoài những món ăn thơm ngon, chúng ta cũng có thể tìm những bộ trang phục truyền thống như
-                            áo dài Tết, nón lá, ... Những bộ trang phục vừa có nét cổ điển lại vừa có nét hiện đại.</p>
+                        <p>
+                            Ngoài những món ăn thơm ngon, chúng ta cũng có thể tìm những bộ trang phục truyền thống như
+                            áo dài Tết, nón lá, ... Những bộ trang phục vừa có nét cổ điển lại vừa có nét hiện đại.
+                        </p>
                     </div>
                     <div class="right-img">
                         <img src="./assets/images/traditional-clothes-1.jpg" alt="">
@@ -144,6 +146,7 @@
 
         </main>
         <!-- End content -->
+        <div class="break-div"></div>
         <!-- Start footer -->
         <footer>
             <div class="container">
