--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <header class="header"></header>
         <!-- End header -->
         <!-- Start content -->
-        <main>
+        <main class="animation-fly-in">
             <div class="container">
                 <div class="content d-flex">
                     <div class="left-infor">
@@ -51,6 +51,7 @@
                         <input type="text" class="text-input subject" id="subject" placeholder="Enter your subject">
                         <p>Message</p>
                         <textarea rows="5" cols="40" class="text-input" id="message" placeholder="Enter your message"></textarea>
+                        <input type="submit" value="Send" class="submit-button">
                     </form>
                 </div>
             </div>
