--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./src/CSS/allstyle.css">
     <link rel="stylesheet" href="./src/CSS/index.css">
     <link rel="stylesheet" href="./src/CSS/nav.css">
+    <link rel="stylesheet" href="./src/CSS/footer.css">
     <!-- Font Awesome 6.3.1 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -148,10 +149,8 @@
         <!-- End content -->
         <div class="break-div"></div>
         <!-- Start footer -->
-        <footer>
-            <div class="container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/T3yr53-MnQ4?si=NmqpIEuG11apbRsW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            </div>
+        <footer class="footer">
+            
         </footer>
         <!-- End footer -->
     </div>
