--- a/shop.html
+++ b/shop.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./src/CSS/allstyle.css">
     <link rel="stylesheet" href="./src/CSS/shop.css">
     <link rel="stylesheet" href="./src/CSS/nav.css">
+    <link rel="stylesheet" href="./src/CSS/footer.css">
     <!-- Font Awesome 6.3.1 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -31,7 +32,7 @@
         <header class="header"></header>
         <!-- End header -->
         <!-- Start content -->
-        <main>
+        <main class="animation-fly-in">
             <form action="" class="search-form">
                 <h3 class="heading">Bạn muốn tìm cái gì không?</h3>
                 <div class="input d-flex items-center justify-evenly">
@@ -47,7 +48,7 @@
         </main>
         <!-- End content -->
         <!-- Start footer -->
-        <footer>
+        <footer class="footer">
 
         </footer>
         <!-- End footer -->
