--- a/signup.html
+++ b/signup.html
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <!-- Style -->
-    <link rel="stylesheet" href="../src/CSS/allstyle.css">
-    <link rel="stylesheet" href="../src/CSS/nav.css">
-    <link rel="stylesheet" href="../src/CSS/signup.css">
+    <link rel="stylesheet" href="./src/CSS/allstyle.css">
+    <link rel="stylesheet" href="./src/CSS/nav.css">
+    <link rel="stylesheet" href="./src/CSS/signup.css">
     <!-- Font Awesome 6.3.1 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -87,7 +87,7 @@
         <!-- End content -->
     </div>
     <!-- Script -->
-    <script src="../src/JS/signUpScript.js"></script>
+    <script src="./src/JS/signUpScript.js"></script>
     <!-- Background -->
     <div class="background position-fixed"></div>
 </body>
