--- a/contact.html
+++ b/contact.html
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <!-- Style -->
-    <link rel="stylesheet" href="../src/CSS/allstyle.css">
-    <link rel="stylesheet" href="../src/CSS/contact.css">
-    <link rel="stylesheet" href="../src/CSS/nav.css">
+    <link rel="stylesheet" href="./src/CSS/allstyle.css">
+    <link rel="stylesheet" href="./src/CSS/contact.css">
+    <link rel="stylesheet" href="./src/CSS/nav.css">
     <!-- Font Awesome 6.3.1 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
@@ -59,8 +59,8 @@
         <!-- End content -->
     </div>
     <!-- Script -->
-    <script src="/src/JS/insertNav.js"></script>
-    <script src="/src/JS/index.js"></script>
+    <script src="./src/JS/insertNav.js"></script>
+    <script src="./src/JS/index.js"></script>
 </body>
 
 </html>
