--- a/signup.html
+++ b/signup.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tết Giáp Thìn 2024</title>
     <!-- Icon -->
-    <link rel="shortcut icon" href="/assets/images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/background.jpg" type="image/x-icon">
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
