--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">
     <!-- Style -->
-    <link rel="stylesheet" href="../src/CSS/allstyle.css">
+    <link rel="stylesheet" href="./src/CSS/allstyle.css">
     <link rel="stylesheet" href="../src/CSS/blog.css">
     <link rel="stylesheet" href="../src/CSS/nav.css">
     <!-- Font Awesome 6.3.1 -->
