--- a/signin.html
+++ b/signin.html
@@ -42,7 +42,7 @@
                             <label for="password-input" class="d-block">Password</label>
                             <input type="password" name="" id="password-input" placeholder="Enter your password"
                                 class="text-input">
-                            <a href="../HTML/signup.html" class="d-block decoration-none color-black">Don't have
+                            <a href="./HTML/signup.html" class="d-block decoration-none color-black">Don't have
                                 account? Click here to sign up</a>
                             <input type="submit" value="Sign in" class="d-block submit-btn">
                             <p>Or login by</p>
