--- a/contact.html
+++ b/contact.html
@@ -61,6 +61,7 @@
     <!-- Script -->
     <script src="./src/JS/insertNav.js"></script>
     <script src="./src/JS/index.js"></script>
+    <script src="./src/JS/contact.js"></script>
 </body>
 
 </html>
