--- a/contact.html
+++ b/contact.html
@@ -50,7 +50,7 @@
                         <p>Subject</p>
                         <input type="text" class="text-input subject" id="subject" placeholder="Enter your subject">
                         <p>Message</p>
-                        <textarea rows="5" cols="40" class="text-input" id="message" placeholder="Enter your message"></textarea>
+                        <textarea rows="5" cols="40" class="text-input message" id="message" placeholder="Enter your message"></textarea>
                         <input type="submit" value="Send" class="submit-button">
                     </form>
                 </div>
